--- a/Redis/Redis.csproj
+++ b/Redis/Redis.csproj
@@ -14,7 +14,7 @@
         <Authors>James Woodley</Authors>
         <Company>LightestNight Ltd</Company>
         <Title>LightestNight :: System :: Event Sourcing :: Checkpoints :: Redis</Title>
-        <Description>Core elements to enable Event Sourcing paradigms</Description>
+        <Description>The elements required to manage a Stream checkpoint inside a Redis data store</Description>
         <PackageTags>lightestnight;system;infrastructure;event;event sourcing;domain driven design;cqrs;checkpoints;redis</PackageTags>
         <Version>1.0.0</Version>
         <PackageVersion>1.0.0</PackageVersion>
